--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Frontend Service
   frontend:
@@ -53,7 +51,7 @@ services:
 
   # MongoDB Admin Interface (optional)
   mongo-express:
-    image: mongo-express
+    image: mongo-express:1.0.2
     container_name: servicehub-mongo-express
     ports:
       - "8081:8081"
