--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.6.0",
     "http-proxy-middleware": "^3.0.5",
     "input-otp": "^1.4.2",
+    "libphonenumber-js": "^1.12.25",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
@@ -55,7 +56,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.25.76"
   },
   "scripts": {
     "start": "craco start",
