Enforce universal brand green (#34D164): update Tailwind green palette, replace hardcoded hex (#2F8140/#32CD32) across frontend and assets, align manifest and SVGs, verify via dev preview.

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -4,6 +4,6 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2F8140",
+  "theme_color": "#34D164",
   "icons": []
 }
