--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,35 @@
+version: '3.9'
 services:
-  # Frontend Service
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      - REACT_APP_BACKEND_URL=http://localhost:8001
-      - REACT_APP_GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
-    depends_on:
-      - backend
-    networks:
-      - servicehub-network
-
-  # Backend Service
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8001:8001"
-    env_file:
-      - ./backend/.env
+      context: .
+      dockerfile: GGospelGT/backend/Dockerfile
     environment:
-      - TERMII_API_KEY=${TERMII_API_KEY}
+      - PORT=8000
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-*}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost}
+      - MESSAGE_ATTACHMENT_MAX_BYTES=${MESSAGE_ATTACHMENT_MAX_BYTES:-10485760}
+      - CERT_IMAGE_MAX_BYTES=${CERT_IMAGE_MAX_BYTES:-5242880}
+      - MONGO_URL=${MONGO_URL}
+      - DB_NAME=${DB_NAME:-servicehub}
       - SENDGRID_API_KEY=${SENDGRID_API_KEY}
       - SENDER_EMAIL=${SENDER_EMAIL}
-      - CORS_ORIGINS=http://localhost:3000
+      - TERMII_API_KEY=${TERMII_API_KEY}
+      - TERMII_SENDER_ID=${TERMII_SENDER_ID}
+      - SECRET_KEY=${SECRET_KEY}
+      - UPLOADS_DIR=/app/backend/uploads
     volumes:
-      - ./backend:/app/backend
-    networks:
-      - servicehub-network
+      - ./GGospelGT/backend/uploads:/app/backend/uploads
+    expose:
+      - "8000"
+    restart: unless-stopped
 
-networks:
-  servicehub-network:
-    driver: bridge
+  web:
+    build:
+      context: .
+      dockerfile: GGospelGT/frontend/Dockerfile
+    depends_on:
+      - backend
+    ports:
+      - "80:80"
+    restart: unless-stopped
