--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,12 @@
-# Frontend Dockerfile
-FROM node:20-alpine
-
-WORKDIR /app
-
-# Build-time backend URL arg to bake correct env into bundle
-ARG REACT_APP_BACKEND_URL
-ENV REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
-
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install --legacy-peer-deps
-
-# Copy source code
-COPY . .
-
-# Build the app (uses REACT_APP_BACKEND_URL from build args)
+FROM node:20-alpine AS build
+WORKDIR /app/frontend
+COPY GGospelGT/frontend/package*.json ./
+RUN npm ci
+COPY GGospelGT/frontend ./
 RUN npm run build
 
-# Install serve to run the built app
-RUN npm install -g serve
-
-# Expose port
-EXPOSE 3000
-
-# Start the application
-CMD ["serve", "-s", "build", "-l", "3000"]
+FROM nginx:alpine
+COPY GGospelGT/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY --from=build /app/frontend/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
